Initial dist subtree commit

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "wordle",
   "version": "0.0.1",
   "description": "Node.js italian clone of wordle by John Wardle",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server/index.js",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "Sebastiano Morando",
   "license": "ISC",
