--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server/index.js",
     "start": "parcel index.html",
-    "build": "rm -r dist && parcel build index.html --public-url . && cp wordle_it_1200x630.png dist"
+    "build": "parcel build index.html --public-url ."
   },
   "author": "Sebastiano Morando",
   "license": "ISC",
